src/index.css
body { 
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
    padding: 20px;
    background-color: #f3f4f6;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}
.div{
  /* margin-left: 40%; */
  display: flex;
}
.header-main{
  margin-bottom: auto;
  color: #9e9fa3;
  font-size: 10px;
}
.main{
  width: 150px;
  height: 49px;
  border: 2px #dedfe1 solid;
  border-radius: 7px;
  font-size: 15px;
  padding-bottom: 1px;
}

.div-main{
  margin-top: 29px;
}
.generate{
  width: 150px;
  height: 50px;
  margin-left: 10px;
  border: 1px #d4e2f8 solid;
  border-radius: 7px;
  background-color: #1b55db;
  color: white;
  text-align: center;
  font-size: 15px;
  &:hover{
    background-color: #0c42bf;
    border: 2px #dedfe1 solid;
  }
}
.div-output{
  display: flex;
  /* margin-top: 10px; */
}
.box-output{
  background-color: white;
  border: 2px #dedfe1 solid;
  border-radius: 15px;
  width: 300px;
  height: 30px;
  padding: 0px 15px 15px 15px ;
  word-wrap: break-word;
}
.div-box-output{
  margin-left: 50px;
}
.text{
  padding-top: 10px;
  margin: auto;
}
.input{
  width: 400px;
  height: 400px;
  border: 2px #dedfe1 solid;
  border-radius: 7px;
  font-size: 15px;
  padding: 10px 15px 5px 15px;
  resize: none
}
.encrypt{
  width: 80px;
  height: 50px;
  margin-left: 10px;
  border: 1px #d4e2f8 solid;
  border-radius: 7px;
  background-color: #1b55db;
  color: white;
  text-align: center;
  font-size: 15px;
  margin-right: 10px;
  &:hover{
    background-color: #0c42bf;
    border: 2px #dedfe1 solid;
  }
}
.decrypt{
  width: 80px;
  height: 50px;
  margin-left: 10px;
  border: 1px #d4e2f8 solid;
  border-radius: 7px;
  background-color: #1b55db;
  color: white;
  text-align: center;
  font-size: 15px;
  margin-right: 10px;
  &:hover{
    background-color: #0c42bf;
    border: 2px #dedfe1 solid;
  }
}
.box-response{
  background-color: white;
  border: 2px #dedfe1 solid;
  border-radius: 15px;
  width: 400px;
  height: 400px;
  padding: 0px 15px 15px 15px ;
  word-wrap: break-word;
}
.div-button{
  margin-top: 53px;
}
.div-a-button{
  margin-bottom: 15px;
}

